# purs

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-clippy.yml
src/: main.rs  precmd.rs  prompt.rs
