[package]
name = "purs"
version = "0.3.3"
authors = ["Xavier Cambar <xcambar@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
clap = { version = "4.3.19", default-features = false, features = ["std", "help"] }
git2 = { version = "0.17.2", default-features = false }
nix = { version = "0.26.2", default-features = false, features = [ "hostname" ] }
colored = { version = "2.0.4", default-features = false }
