[package]
name = "purs"
version = "0.3.5"
authors = ["Xavier Cambar <xcambar@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["std", "help"] }
git2 = { version = "0.19.0", default-features = false }
nix = { version = "0.29.0", default-features = false, features = [ "hostname" ] }
colored = { version = "2.1.0", default-features = false }
itertools = { version = "0.13.0" }
